<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="star_walk">Star Walk</string>
    <string name="ursaicon">ursaIcon</string>
    <!-- Strings used for fragments for navigation -->

    <string name="home_message">All you need to unravel the mysteries of the midnight sky</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="video_of_the_day">Video of the day</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="divider">divider</string>
    <string name="space_is_now">Space is Now</string>
    <string name="type_to_search">Type to search</string>
    <string name="settings">Settings</string>
    <string name="select_app_theme">Select App Theme</string>
    <string name="you_selected">You selected:</string>
    <string name="save">Apply  theme</string>
    <string name="themePicture">themePicture</string>
    <string name="moon_theme">Moon Theme</string>
    <string name="space_theme">Space Theme</string>
    <string name="mars_theme">Mars Theme</string>
    <string name="image">Image</string>
    <string name="zoom_in_btn">zoomInBtn</string>
    <string name="add_note">Add note</string>
    <string name="notes">Notes</string>
    <string name="enter_note_text">Enter note text</string>
</resources>