<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="pictureReceived"
            type="Boolean" />

        <variable
            name="currentDate"
            type="String" />

        <variable
            name="imageURL"
            type="String" />

        <variable
            name="isExpanded"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="57dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="57dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/ursaicon"
                android:src="@drawable/ic_ursa_major"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/headersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_walk"
                android:textSize="@dimen/_18ssp"
                android:transitionName="textTransition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/ivDivider"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:alpha="0.4"
                android:background="@color/white"
                android:contentDescription="@string/divider"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxWidth="@dimen/_160sdp"
                android:text="@string/home_message"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivDivider" />

            <TextView
                android:id="@+id/textView3"
                style="@style/headersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/space_is_now"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:text="@{currentDate}"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/cvImageContainer"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvImageContainer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_170sdp"
                android:layout_marginHorizontal="@dimen/startMargin"
                android:layout_marginTop="@dimen/_6sdp"
                android:visibility="@{imageURL != null ? View.VISIBLE : View.INVISIBLE, default=invisible}"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <ImageView
                    android:id="@+id/ivPictureOfTheDay"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_420sdp"
                    android:contentDescription="@string/picture_of_the_day"
                    android:scaleType="fitStart"
                    app:url="@{imageURL}" />

                <TextView
                    style="@style/imageDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@{pictureReceived ? @string/picture_of_the_day : @string/video_of_the_day, default = @string/picture_of_the_day}"
                    android:visibility="@{imageURL != null ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintBottom_toBottomOf="@+id/cvImageContainer"
                    app:layout_constraintStart_toStartOf="@+id/cvImageContainer" />

                <ImageView
                    android:id="@+id/btnZoomIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:contentDescription="@string/zoom_in_btn"
                    android:padding="@dimen/_5sdp"
                    android:src="@{!isExpanded ? @drawable/ic_zoom_in : @drawable/ic_zoom_out, default=@drawable/ic_zoom_in}"
                    android:visibility="@{pictureReceived ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintBottom_toBottomOf="@+id/cvImageContainer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/white" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="@{imageURL != null ? View.GONE : View.VISIBLE, default=visible}"
                app:indicatorColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/cvImageContainer"
                app:layout_constraintEnd_toEndOf="@+id/cvImageContainer"
                app:layout_constraintStart_toStartOf="@+id/cvImageContainer"
                app:layout_constraintTop_toTopOf="@+id/cvImageContainer"
                app:trackColor="?attr/progressBarColor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>